Syncing up with local copy

--- a/IdealZero.html
+++ b/IdealZero.html
@@ -27,6 +27,7 @@
     	The 12 gauge slug is limited by both trajectory and accuracy; see what happens when the dispersion is reduced to 3 MOA.</p>
     </ul>
 
+    <p>Sight height is measured from the center of the bore to the top of the front sight post or bead, or to the center of the aperture for front aperture sights.  For scopes, measure to the center of the scope.</p>
    <table>
 	<tr><td>Muzzle velocity (feet per second):</td><td><input type="number" id="mvel" value="1600"></td></tr>
 	<tr><td>Ballistic coefficient:</td><td><input type="number" id="bc" value="0.11"></td></tr>
