Fixing MOA math.

--- a/BallisticChart.html
+++ b/BallisticChart.html
@@ -57,6 +57,8 @@
 			<input type="radio" name="mil_interval" id="mil_1.0" checked/> 1.0 mil<br />
 			<input type="radio" name="mil_interval" id="mil_0.5"/> 0.5 mils<br />
 			<input type="radio" name="mil_interval" id="mil_0.25"/> 0.25 mils<br />
+			<input type="radio" name="mil_interval" id="moa_1"/> 1.0 MOA<br />
+			<input type="radio" name="mil_interval" id="moa_5"/> 5.0 MOA<br />
 		</td></tr>
 	</table>
 
